# tug

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/nginx/: README.md  tug.kdl
examples/nginx/html/: index.html
examples/redis/: README.md  redis.conf  tug.kdl
examples/todomvc/: README.md
examples/todomvc/backend/: Containerfile  main.py  requirements.txt
examples/todomvc/frontend/: index.html  package.json
examples/todomvc/frontend/src/: App.jsx  index.css
examples/todomvc/infra/: backend.tug.kdl  nginx.tug.kdl  redis.tug.kdl
examples/todomvc/infra/nginx/: default.conf
src/: config.rs  logger.rs  main.rs  utils.rs
src/cli/: down.rs  mod.rs  push.rs  sync.rs
src/cli/debug/: mod.rs  ping.rs  validate.rs
src/cli/query/: container.rs  mod.rs  network.rs  volume.rs
src/parse/: mod.rs  model.rs  span.rs
src/plan/: container.rs  garbage.rs  image.rs  mod.rs  network.rs  secret.rs  volume.rs
src/prepare/: diagnostics.rs  mod.rs
