[package]
name = "tug"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compat = "0.2.1"
async-recursion = "1.0.4"
async-tar = "0.4.2"
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = "0.10.4"
dirs = "5.0.1"
figment = { version = "0.10.10", features = ["toml", "env"] }
futures-util = "0.3.28"
hyper = "0.14.27"
knuffel = "3.2.0"
maplit = "1.0.2"
miette = { version = "5.10.0", features = ["fancy"] }
parking_lot = "0.12.1"
podman-api = "0.10.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.176", features = ["derive"] }
shlex = "1.1.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["net", "macros", "rt", "fs", "io-util"] }
url = { version = "2.4.0", features = ["serde"] }
walkdir = "2.3.3"
